--- a/src/Sample.Calculator/Sample.Calculator/Sample.Calculator.csproj
+++ b/src/Sample.Calculator/Sample.Calculator/Sample.Calculator.csproj
@@ -5,18 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LiveSharp.Support.XamarinForms" Version="1.0.10" />
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.446417" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Clarity\Clarity.csproj" />
   </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="LiveSharp">
-      <HintPath>..\..\..\..\LiveSharp\build\LiveSharp.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  
-  <Import Project="..\..\..\..\LiveSharp\build\LiveSharp.targets" />
 </Project>
