--- a/src/Sample.Calculator/Sample.Calculator/Sample.Calculator.csproj
+++ b/src/Sample.Calculator/Sample.Calculator/Sample.Calculator.csproj
@@ -10,6 +10,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Clarity\Clarity.csproj" />
+    <ProjectReference Include="..\..\Clarity.XamarinForms\Clarity.XamarinForms.csproj" />
   </ItemGroup>
 </Project>
