--- a/src/Sample.Calculator/Sample.Calculator/Sample.Calculator.csproj
+++ b/src/Sample.Calculator/Sample.Calculator/Sample.Calculator.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LiveSharp.Support.XamarinForms" Version="1.0.10" />
+    <PackageReference Include="livesharp" Version="1.0.17" />
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.446417" />
   </ItemGroup>
 
