--- a/src/Clarity.Generator/Clarity.Generator.csproj
+++ b/src/Clarity.Generator/Clarity.Generator.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="2.10.0" />
+    <PackageReference Include="mono.cecil" Version="0.10.1" />
+    <PackageReference Include="System.Reflection.Metadata" Version="1.6.0" />
+  </ItemGroup>
+
 </Project>
